spade-tests/src/snapshots/spade_tests__ast_lowering__mod_recommendations_are_correct.snap
---
source: spade-tests/src/ast_lowering.rs
---
pub mod submod {
    struct A {}
}
mod submod2 {
    use lib::submod::A;
}


error: A is inaccessible
  ┌─ testinput:5:22
  │
2 │     struct A {}
  │     ----------- The inaccessible item is defined here
  ·
5 │     use lib::submod::A;
  │                      ^ A is inaccessible
  │
  = note: consider using `pub` to alter its visibility
